--- a/.env
+++ b/.env
@@ -1,2 +1,15 @@
 VUE_APP_I18N_LOCALE=en
 VUE_APP_I18N_FALLBACK_LOCALE=en
+
+VUE_APP_APYKEY=key5MzcGxZBIo3UCR
+VUE_APP_URL=https://api.airtable.com/v0/appJBaGAWKF4l4Px3
+VUE_APP_AT_BASE=appJBaGAWKF4l4Px3
+
+VUE_APP_GOOGLE_APIKEY=AIzaSyDcqfkz4MyJhtAJGFWGRGpsKMJTOEO3H7o
+
+VUE_APP_FBKEY=AIzaSyBS2GYJ00RdYX00Y1KWT9gV3eOTpvB9SYo
+VUE_APP_DOMAIN=geosearch-e8050.firebaseapp.com
+VUE_APP_PROJECT_ID=geosearch-e8050
+VUE_APP_STORAGE_BUCKET=geosearch-e8050.appspot.com
+VUE_APP_SENDERID=1084270915725
+VUE_APP_APPID=1:1084270915725:web:a21cd02bba7225203772c4
