--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.12.4",
+    "axios": "^0.22.0",
     "core-js": "^3.6.2",
+    "firebase": "8.7.1-20216817413",
     "vue": "^2.6.11",
+    "vue-cool-select": "^3.5.2",
     "vue-i18n": "^8.15.3",
     "vue-router": "^3.1.3",
     "vuetify": "^2.2.11",
